[package]
name = "onyx"
version = "0.1.0"
authors = ["Joe Sheen <joe123sheen@hotmail.com>"]
edition = "2018"

[lib]
name = "onyxlib"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
crypto-hash = "0.3.4"